# sensehat

./: CMakeLists.txt  README.md
include/: Hts221.hpp  I2c_Io.hpp  Lps25h.hpp  SenseHat.hpp  SenseHatDefs.hpp
sensehat/: CMakeLists.txt  Hts221.cpp  I2c_Io.cpp  Lps25h.cpp  SenseHat.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  unit_tests.cpp
